<resources>
    <string name="app_name">Vector Gym</string>
    <string name="key_id">Your razorpay id</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trangChu">TRANG CHỦ</string>
    <string name="dichVu">DỊCH VỤ</string>
    <string name="theKH">ĐĂNG KÝ</string>
    <string name="thongKe">THỐNG KÊ</string>
    <string name="taiKhoan">TÀI KHOẢN</string>
    <string name="hoaDon">HÓA ĐƠN</string>
    <string name="khachHang">KHÁCH HÀNG</string>
    <string name="nhanVien">NHÂN VIÊN</string>

    <string name="search">Tìm kiếm</string>
    <string name="gia">Giá</string>
    <string name="ngayBD">Ngày bắt đầu</string>
    <string name="ngayKT">Ngày kết thúc</string>
    <string name="ngayAD">Ngày áp dụng</string>
    <string name="dangKy">Đăng ký</string>

    <string name="hoaDonSo">Hóa đơn số</string>
    <string name="loaiDV">Loại dịch vụ</string>
    <string name="donGia">Đơn giá</string>
    <string name="thanhTien">Thành tiền</string>
    <string name="tongThanhToan">Tổng tiền thanh toán</string>
    <string name="soLuong">Số lượng</string>
    <string name="nhanVienLap">Nhân viên</string>
    <string name="ngayLap">Ngày lập</string>
    <string name="khachHangDK">Khách hàng</string>
    <string name="sdtKH">Số điện thoại</string>
    <string name="khuyenMai">Khuyến mại</string>
    <string name="giamTien">Số tiền được giảm</string>
    <string name="noiDung">Nội dung</string>

    <string name="thang">Tháng</string>
    <string name="doanhThu">Doanh Thu</string>
    <string name="tongDT">Tổng Doanh Thu</string>
</resources>