<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tvItemTK"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/tvDTThang"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/thang"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvDTDichVu"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvDTDichVu"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/dichVu"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/tvDTThang"
        app:layout_constraintEnd_toStartOf="@id/tvDoanhThu"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tvDoanhThu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/doanhThu"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:padding="10dp"
        android:textSize="14sp"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toEndOf="@id/tvDTDichVu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>